<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="Enviroment_Parameters" Id="{48760720-f476-4b9e-97b3-896a9e24eb50}">
    <Declaration><![CDATA[TYPE Enviroment_Parameters :
STRUCT
	
			Friction_coefficient		:  LREAL := 0.02 ; 

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>