<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="Motion_Parameters" Id="{8a77553b-194c-4510-ae1e-272b07e08d0a}">
    <Declaration><![CDATA[TYPE Motion_Parameters :
STRUCT
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>