<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="XPlanarMover" Id="{3939b667-1d94-4118-9d46-041468b4f25e}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK XPlanarMover
VAR_INPUT
	
			MotionParameters			:		Motion_Parameters; 

END_VAR
VAR_OUTPUT
	
			Xplanar_Mover 				: 		MC_PlanarMover; 
			moverState					:		MC_Planar_State;

END_VAR
VAR
	
			stExtOptions				:		ARRAY [1..2]  OF ST_ExternalSetpointGenerationOptions; 
			cmdFB 						:		ARRAY [1..2]  OF MC_PlanarFeedBack ;	
			Timer						: 		TON;
			DONE						: 		BOOL;
			XpPosition					:		MoverVector; 
			MoverPos					:		MoverVector;
			ZeroVector 					:		MoverVector;
			InvertX						:		LREAL; 
			InvertY						:		LREAL;
			nCase 						: 		SINT := 1; 
			
			EnviromentParameters		:		Enviroment_Parameters; 
			
			
			//testing xandy 
				
	SumnedForce_Y 			: LREAL; 
	SumnedForce_X			: LREAL;
	acceleration_magnitude 	: LREAL;
	Mover_acceleration		: MoverVector;
	friction_force			: MoverVector; 
	ratio					: LREAL;
	MoverActVelocity		: MoverVector;
	SumnedVelocity			: MoverVector;
			
			
END_VAR
VAR_IN_OUT
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[Cyclic(); 



	Xplanar_Mover.SetExternalSetpoint( XpPosition, ZeroVector, ZeroVector);

]]></ST>
    </Implementation>
    <Action Name="Cyclic" Id="{82484dc3-e441-4c06-856d-d2ed15a41028}">
      <Implementation>
        <ST><![CDATA[//Mover 1 updates
Xplanar_Mover.Update(); 
cmdFB[1].Update();
moverState := Xplanar_Mover.MCTOPLC.STD.State;
MoverPos := Xplanar_Mover.MCTOPLC.ACT.ActPos;


]]></ST>
      </Implementation>
    </Action>
    <Method Name="Height" Id="{a081a7d9-e07b-49a5-bb9d-587c5faff0c3}">
      <Declaration><![CDATA[METHOD Height
VAR_INPUT
	
LBumper 					: BOOL; 
RBumper 					: BOOL; 

END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//IF Done AND (NOT MoverState = 5 OR  MoverState = 1) THEN 
	
//END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Init" Id="{def29215-c1db-47bd-a987-c8cae1603651}">
      <Declaration><![CDATA[METHOD Init
VAR_INPUT
	
	bStart 						: BOOL ;

END_VAR
VAR

END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[CASE nCase OF
1: 

	Done := FALSE;
	Xplanar_Mover.Reset(cmdFB[1]);
	nCase := 2;

2:

	IF cmdFB[1].Done THEN
		nCase := 3; 
	END_IF
	
3:

	Xplanar_Mover.Enable(cmdFB[1]);
	nCase := 4;
	
4:

	IF cmdFB[1].Done THEN
		nCase := 5;
	END_IF
	
5:

	stExtOptions[1].mode := MC_EXTERNAL_SET_POSITION_MODE.Absolute; // Setting up external Setpoint generator
	nCase := 6; 
6:


	nCase := 7;

7:

	IF  MoverState = 5 OR  MoverState = 1 THEN 
		nCase := 1;		
	ELSE 		
		nCase := 8;
	END_IF 

8:
	IF MoverState = 3 THEN 
		nCase := 9;
	END_IF
9:

	IF bStart THEN
		nCase := 10;
	END_IF

10:
	//Update Positions to real world value before initization of External Setpoint
	IF cmdFB[1].Done  AND NOT cmdFB[1].Busy AND NOT cmdFB[2].Busy  THEN
		XpPosition.y := MoverPos.y; 
		XpPosition.x := MoverPos.x; 
		XpPosition.z := MoverPos.z;
		XpPosition.c := MoverPos.c;
		nCase := 11;
	END_IF


11:

	//Start External Setpoint Generatior
	Xplanar_Mover.StartExternalSetpointGeneration(cmdFB[1], stExtOptions[1]); 
	nCase := 12; 
12:

	nCase := 13;
	
13:

// If errored be able to reset 
IF MoverState = 5 OR  MoverState = 1 THEN
	nCase := 1; 
ELSE
	Done := TRUE; 
END_IF
 	
END_CASE]]></ST>
      </Implementation>
    </Method>
    <Method Name="Recover" Id="{e6a63d81-483f-4a71-99d2-c7f5840dab5a}">
      <Declaration><![CDATA[METHOD Recover
VAR_INPUT
	
			bBack 							: BOOL ; 

END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[(*CASE nRecover OF 
	1:
		IF Done THEN
			nRecover := nRecover + 1;
		END_IF
	
	2:
	
		IF  MoverState = 5 OR  MoverState = 1 THEN
			nRecover := nRecover + 1; 
		END_IF
		
	3:
	
		IF 
			
		END_IF
		
END_CASE*)]]></ST>
      </Implementation>
    </Method>
    <Method Name="Rotation" Id="{93c77cf9-6e7f-471c-a695-31105a4ae36b}">
      <Declaration><![CDATA[METHOD Rotation : BOOL
VAR_INPUT
	
LTrigger 				: INT ; 
RTrigger 				: INT ; 

END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//IF Done AND (NOT MoverState = 5 OR  MoverState = 1) THEN 
	
//END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Tilt" Id="{c7f673dd-bde8-4bb0-a48c-edd491df8f0b}">
      <Declaration><![CDATA[METHOD Tilt
VAR_INPUT
	
rStick_X 				: LREAL;
rStick_Y				: LREAL;
bButton_B 				: BOOL; 

END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//IF Done AND (NOT MoverState = 5 OR  MoverState = 1) THEN 
	
//END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="XYMovement" Id="{baec03b5-3e08-481e-807f-3454b9c413ba}">
      <Declaration><![CDATA[METHOD XYMovement
VAR_INPUT
	
lStick_X 				: LREAL;
lStick_Y				: LREAL;
bButton_A 				: BOOL; 
bButton_X 				: BOOL;
bButton_Y 				: BOOL;

END_VAR
VAR
 
	
	
	
	
	
END_VAR
VAR_IN_OUT

END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF Done (*AND NOT MoverState = 5 OR  MoverState = 1*) THEN 
	
	MoverActVelocity := Xplanar_Mover.MCTOPLC.ACT.ActVelo; 


	// Read the analog stick inputs (x and y) and scale them to control acceleration
    // Input values are assumed to be in the range [-100, 100] for both x and y axes
    // Scale them to the range [-max_acceleration, max_acceleration] for acceleration
	Mover_acceleration.x := lStick_X * MotionParameters.maxAcceleration / 100.0;
   	Mover_acceleration.y := lStick_Y * MotionParameters.maxAcceleration / 100.0;

  	// Calculate the magnitude of the current acceleration
  	acceleration_magnitude := SQRT(Mover_acceleration.x * Mover_acceleration.x + Mover_acceleration.y * Mover_acceleration.y);


  	// Calculate the friction force
	// EnviromentParameters.Friction_coefficient is positive and < 1 friction force is negative (opposite of velocity direction)
  	friction_force.x := -1 * EnviromentParameters.Friction_coefficient * MoverActVelocity.x;
	friction_force.y := -1 * EnviromentParameters.Friction_coefficient * MoverActVelocity.y;

  
	// Apply friction to the acceleration
	IF acceleration_magnitude >= 0.00001 THEN // divde by zero check

  		// Reduce acceleration based on the friction force
 		SumnedForce_X := Mover_acceleration.x + (friction_force.x);
 		SumnedForce_Y := Mover_acceleration.y + (friction_force.y);
	ELSE
  		// If the acceleration is already zero, set it to exactly zero
  		SumnedForce_X := 0.0;
  		SumnedForce_Y := 0.0;
	END_IF;

//	position <= MAX position possible based on MAX velocity in 250us 
//					tableboundry					500mm/s
// max velocity cannot exceed the physical Xplanar mover Velocity 
// position cannot go outisde table boundries  
	
	// Update the object's velocity based on the acceleration (INTEGRATING)
 	SumnedVelocity.x := SumnedVelocity.x + Mover_acceleration.x * MotionParameters.deltaT / 100.0;
    SumnedVelocity.y := SumnedVelocity.y + Mover_acceleration.y * MotionParameters.deltaT / 100.0;

	//invert Controls for correct direction of travel
	invertX				:= SEL(lStick_X < 1,1,-1);
	invertY				:= SEL(lStick_Y < 1,1,-1);
	
	// Update the object's position based on the velocity(INTEGRATING)
	//Position 						 //Velocity 	
	XpPosition.y		:= XpPosition.y + (( EXPT( SumnedVelocity.y , 2) / 100 )* MotionParameters.deltaT ) * invertY;
	XpPosition.x		:= XpPosition.x + (( EXPT( SumnedVelocity.x , 2) / 100 )* MotionParameters.deltaT ) * invertX;

END_IF]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="XPlanarMover">
      <LineId Id="104" Count="0" />
      <LineId Id="101" Count="1" />
      <LineId Id="25" Count="0" />
      <LineId Id="92" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="65" Count="0" />
    </LineIds>
    <LineIds Name="XPlanarMover.Cyclic">
      <LineId Id="2" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="4" Count="1" />
      <LineId Id="1" Count="0" />
      <LineId Id="7" Count="1" />
      <LineId Id="15" Count="0" />
    </LineIds>
    <LineIds Name="XPlanarMover.Height">
      <LineId Id="5" Count="0" />
      <LineId Id="13" Count="1" />
    </LineIds>
    <LineIds Name="XPlanarMover.Init">
      <LineId Id="12" Count="24" />
      <LineId Id="43" Count="22" />
      <LineId Id="67" Count="29" />
      <LineId Id="98" Count="1" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="XPlanarMover.Recover">
      <LineId Id="5" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="14" Count="12" />
      <LineId Id="33" Count="2" />
      <LineId Id="13" Count="0" />
    </LineIds>
    <LineIds Name="XPlanarMover.Rotation">
      <LineId Id="13" Count="1" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="XPlanarMover.Tilt">
      <LineId Id="13" Count="1" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="XPlanarMover.XYMovement">
      <LineId Id="15" Count="0" />
      <LineId Id="95" Count="0" />
      <LineId Id="135" Count="1" />
      <LineId Id="134" Count="0" />
      <LineId Id="93" Count="1" />
      <LineId Id="16" Count="0" />
      <LineId Id="84" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="69" Count="1" />
      <LineId Id="132" Count="0" />
      <LineId Id="71" Count="1" />
      <LineId Id="138" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="137" Count="0" />
      <LineId Id="77" Count="1" />
      <LineId Id="96" Count="1" />
      <LineId Id="100" Count="1" />
      <LineId Id="133" Count="0" />
      <LineId Id="144" Count="0" />
      <LineId Id="104" Count="3" />
      <LineId Id="61" Count="0" />
      <LineId Id="139" Count="0" />
      <LineId Id="89" Count="0" />
      <LineId Id="142" Count="0" />
      <LineId Id="141" Count="0" />
      <LineId Id="143" Count="0" />
      <LineId Id="140" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="88" Count="0" />
      <LineId Id="63" Count="0" />
      <LineId Id="92" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="53" Count="1" />
      <LineId Id="90" Count="1" />
      <LineId Id="55" Count="1" />
      <LineId Id="28" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>